added dependency-check profile to travis for Activiti/Activiti#1762

--- a/modules/activiti-crystalball/pom.xml
+++ b/modules/activiti-crystalball/pom.xml
@@ -16,6 +16,7 @@
   <build>
     <plugins>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
         <configuration>
           <archive>
