--- a/modules/activiti-form-engine/pom.xml
+++ b/modules/activiti-form-engine/pom.xml
@@ -106,6 +106,7 @@
   <build>
     <plugins>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
         <configuration>
           <archive>
@@ -202,10 +203,8 @@
       <build>
         <plugins>
           <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-antrun-plugin</artifactId>
-            <!-- only worked with this version, there might be a bug with antrun
-              see http://jira.codehaus.org/browse/MANTRUN-109 -->
-            <version>1.4</version>
             <executions>
               <execution>
                 <id>database-test-create-schema</id>
@@ -254,10 +253,8 @@
       <build>
         <plugins>
           <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-antrun-plugin</artifactId>
-            <!-- only worked with this version, there might be a bug with antrun
-              see http://jira.codehaus.org/browse/MANTRUN-109 -->
-            <version>1.4</version>
             <executions>
               <execution>
                 <id>database-test-create-schema</id>
