--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ before_script:
 
 # Enable integration tests
 script:
-  - mvn verify -B -Pdistro
+  - mvn verify -B -Pdistro,dependency-check
 
 # Send coverage data
 after_success:
