--- a/modules/activiti-dmn-json-converter/pom.xml
+++ b/modules/activiti-dmn-json-converter/pom.xml
@@ -49,6 +49,7 @@
   <build>
     <plugins>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
         <configuration>
           <archive>
