--- a/modules/activiti5-engine/pom.xml
+++ b/modules/activiti5-engine/pom.xml
@@ -326,10 +326,8 @@
       <build>
         <plugins>
           <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-antrun-plugin</artifactId>
-            <!-- only worked with this version, there might be a bug with antrun 
-              see http://jira.codehaus.org/browse/MANTRUN-109 -->
-            <version>1.4</version>
             <executions>
               <execution>
                 <id>database-test-create-schema</id>
