updating poms for lucian_1720_add_validation_endpoint_process_model version

--- a/activiti-spring/pom.xml
+++ b/activiti-spring/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>org.activiti</groupId>
     <artifactId>activiti-root</artifactId>
-    <version>7-201802-EA-SNAPSHOT</version>
+    <version>7-201802-EA-lucian_1720_add_validation_endpoint_process_model-SNAPSHOT</version>
   </parent>
 
   <properties>
