--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,12 @@
     <groupId>org.activiti</groupId>
     <artifactId>activiti-parent</artifactId>
     <version>7-201802-EA-SNAPSHOT</version>
-    <relativePath/>
+    <relativePath />
   </parent>
   <name>Activiti</name>
 
   <artifactId>activiti-root</artifactId>
+  <version>7-201802-EA-lucian_1720_add_validation_endpoint_process_model-SNAPSHOT</version>
   <packaging>pom</packaging>
   <description>BPM and workflow engine</description>
 
