--- a/pom.xml
+++ b/pom.xml
@@ -1,19 +1,20 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.activiti</groupId>
-  <artifactId>activiti-parent</artifactId>
+  <artifactId>activiti-build</artifactId>
   <version>7-201802-EA-SNAPSHOT</version>
   <packaging>pom</packaging>
-  <name>Activiti - Parent</name>
-  <description>BPM and workflow engine (Parent)</description>
+  <name>Activiti :: Build</name>
+  <description>${project.name}</description>
+
   <properties>
-    <version.activiti>7-201802-EA-SNAPSHOT</version.activiti>
     <!-- configuration properties -->
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    <java.version>1.8</java.version>
     <enforcer.failOnDuplicatedClasses>true</enforcer.failOnDuplicatedClasses>
-    <jdk.version>1.8</jdk.version>
 
     <!-- configuration properties for tests-->
     <generated-assertions-folder>${project.build.directory}/generated-test-sources/assertions</generated-assertions-folder>
@@ -23,7 +24,6 @@
     <argLine>-Duser.language=en</argLine>
 
     <!-- dependency -->
-    <assertj.version>3.8.0</assertj.version>
     <batik.version>1.9.1</batik.version>
     <commons-email.version>1.5</commons-email.version>
     <commons-fileupload.version>1.2.2</commons-fileupload.version>
@@ -47,7 +47,7 @@
     <assertj-assertions-generator-maven-plugin.version>2.0.0</assertj-assertions-generator-maven-plugin.version>
     <build-helper-maven-plugin.version>3.0.0</build-helper-maven-plugin.version>
     <dependency-check-maven.version>3.1.1</dependency-check-maven.version>
-    <directory-maven-plugin.version>0.1</directory-maven-plugin.version>
+    <exec-maven-plugin.version>1.5.0</exec-maven-plugin.version>
     <extra-enforcer-rules.version>1.0-beta-6</extra-enforcer-rules.version>
     <illegal-transitive-dependency-check.version>1.7.4</illegal-transitive-dependency-check.version>
     <jacoco-maven-plugin.version>0.7.9</jacoco-maven-plugin.version>
@@ -72,12 +72,13 @@
     <snapshotRepository>
       <id>activiti-enterprise-snapshots</id>
       <name>Activiti Snapshots</name>
-      <url>https://artifacts.alfresco.com/nexus/content/repositories/activiti-snapshots/</url>
+      <url>https://artifacts.alfresco.com/nexus/content/repositories/activiti-snapshots</url>
     </snapshotRepository>
   </distributionManagement>
 
   <modules>
     <module>activiti-dependencies</module>
+    <module>activiti-parent</module>
   </modules>
 
   <repositories>
@@ -103,15 +104,15 @@
     <repository>
       <id>jboss-thirdparty-releases</id>
       <name>JBOSS Maven Repository</name>
-      <url>https://repository.jboss.org/nexus/content/repositories/thirdparty-releases/</url>
+      <url>https://repository.jboss.org/nexus/content/repositories/thirdparty-releases</url>
       <snapshots>
         <enabled>false</enabled>
       </snapshots>
     </repository>
-    <repository> <!-- Using snapshot repo to temporarily keep keycloak adapter -->
+    <repository>
       <id>activiti-snapshots</id>
       <name>Activiti Snapshots</name>
-      <url>https://artifacts.alfresco.com/nexus/content/repositories/activiti-snapshots/</url>
+      <url>https://artifacts.alfresco.com/nexus/content/repositories/activiti-snapshots</url>
       <releases>
         <enabled>false</enabled>
       </releases>
@@ -120,6 +121,29 @@
       </snapshots>
     </repository>
   </repositories>
+
+  <pluginRepositories>
+    <pluginRepository>
+      <id>spring-milestones</id>
+      <name>Spring Milestones</name>
+      <url>https://repo.spring.io/libs-milestone</url>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+    </pluginRepository>
+    <pluginRepository>
+      <id>spring-snapshots</id>
+      <name>Spring Snapshots</name>
+      <url>https://repo.spring.io/libs-snapshot</url>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </pluginRepository>
+  </pluginRepositories>
+
   <!-- Here we add 3rd Party Dependencies -->
   <dependencyManagement>
     <dependencies>
@@ -287,8 +311,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>${maven-compiler-plugin.version}</version>
         <configuration>
-          <source>${jdk.version}</source>
-          <target>${jdk.version}</target>
+          <source>${java.version}</source>
+          <target>${java.version}</target>
           <showDeprecation>true</showDeprecation>
           <showWarnings>true</showWarnings>
           <optimize>true</optimize>
@@ -353,55 +377,6 @@
     <pluginManagement>
       <plugins>
         <plugin>
-          <groupId>org.commonjava.maven.plugins</groupId>
-          <artifactId>directory-maven-plugin</artifactId>
-          <version>${directory-maven-plugin.version}</version>
-        </plugin>
-        <plugin>
-          <groupId>org.eclipse.m2e</groupId>
-          <artifactId>lifecycle-mapping</artifactId>
-          <version>1.0.0</version>
-          <configuration>
-            <lifecycleMappingMetadata>
-              <pluginExecutions>
-                <pluginExecution>
-                  <pluginExecutionFilter>
-                    <groupId>org.codehaus.mojo</groupId>
-                    <artifactId>exec-maven-plugin</artifactId>
-                    <versionRange>[1.5.0,)</versionRange>
-                    <goals>
-                      <goal>java</goal>
-                      <goal>exec</goal>
-                    </goals>
-                  </pluginExecutionFilter>
-                  <action>
-                    <execute>
-                      <runOnIncremental>true</runOnIncremental>
-                      <runOnConfiguration>true</runOnConfiguration>
-                    </execute>
-                  </action>
-                </pluginExecution>
-                <pluginExecution>
-                  <pluginExecutionFilter>
-                    <groupId>org.assertj</groupId>
-                    <artifactId>assertj-assertions-generator-maven-plugin</artifactId>
-                    <versionRange>[2.0.0,)</versionRange>
-                    <goals>
-                      <goal>generate-assertions</goal>
-                    </goals>
-                  </pluginExecutionFilter>
-                  <action>
-                    <execute>
-                      <runOnIncremental>true</runOnIncremental>
-                      <runOnConfiguration>true</runOnConfiguration>
-                    </execute>
-                  </action>
-                </pluginExecution>
-              </pluginExecutions>
-            </lifecycleMappingMetadata>
-          </configuration>
-        </plugin>
-        <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-jar-plugin</artifactId>
           <version>${maven-jar-plugin.version}</version>
@@ -435,7 +410,7 @@
             <autoVersionSubmodules>true</autoVersionSubmodules>
             <allowSnapshots>true</allowSnapshots>
             <noDeploy>false</noDeploy>
-            <useReleaseProfile>true</useReleaseProfile> <!-- Do not generate javadoc when releaseing -->
+            <useReleaseProfile>true</useReleaseProfile> <!-- Do not generate javadoc when releasing -->
             <pushReleases>true</pushReleases>
             <squash>false</squash>
             <keepBranch>true</keepBranch>
@@ -468,7 +443,6 @@
               <configuration>
                 <rules>
                   <requirePluginVersions>
-
                   </requirePluginVersions>
                 </rules>
               </configuration>
@@ -604,7 +578,7 @@
                 <includeResources>true</includeResources>
                 <includeTestResources>true</includeTestResources>
                 <consoleOutput>false</consoleOutput>
-                <logViolationsToConsole>${checkstyle.logViolationsToConsole}</logViolationsToConsole>
+                <logViolationsToConsole>false</logViolationsToConsole>
                 <failsOnError>false</failsOnError>
               </configuration>
             </execution>
@@ -626,8 +600,27 @@
         </plugin>
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
+          <artifactId>exec-maven-plugin</artifactId>
+          <version>${exec-maven-plugin.version}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
           <artifactId>build-helper-maven-plugin</artifactId>
           <version>${build-helper-maven-plugin.version}</version>
+          <executions>
+            <execution>
+              <id>add-generated-assertions-folder</id>
+              <phase>generate-test-sources</phase>
+              <goals>
+                <goal>add-test-source</goal>
+              </goals>
+              <configuration>
+                <sources>
+                  <source>${generated-assertions-folder}</source>
+                </sources>
+              </configuration>
+            </execution>
+          </executions>
         </plugin>
         <plugin>
           <groupId>org.springframework.boot</groupId>
@@ -645,13 +638,6 @@
           <groupId>org.assertj</groupId>
           <artifactId>assertj-assertions-generator-maven-plugin</artifactId>
           <version>${assertj-assertions-generator-maven-plugin.version}</version>
-          <dependencies>
-            <dependency>
-              <groupId>org.assertj</groupId>
-              <artifactId>assertj-core</artifactId>
-              <version>${assertj.version}</version>
-            </dependency>
-          </dependencies>
         </plugin>
       </plugins>
     </pluginManagement>
@@ -693,7 +679,7 @@
         <repository>
           <id>activiti-enterprise-snapshots</id>
           <name>Activiti Snapshots</name>
-          <url>https://artifacts.alfresco.com/nexus/content/repositories/activiti-releases/</url>
+          <url>https://artifacts.alfresco.com/nexus/content/repositories/activiti-releases</url>
         </repository>
       </distributionManagement>
     </profile>
@@ -721,10 +707,69 @@
         </plugins>
       </build>
     </profile>
+
+    <profile>
+      <id>m2eclipse</id>
+      <activation>
+        <property>
+          <name>m2e.version</name>
+        </property>
+      </activation>
+      <build>
+        <pluginManagement>
+          <plugins>
+            <plugin>
+              <groupId>org.eclipse.m2e</groupId>
+              <artifactId>lifecycle-mapping</artifactId>
+              <version>1.0.0</version>
+              <configuration>
+                <lifecycleMappingMetadata>
+                  <pluginExecutions>
+                    <pluginExecution>
+                      <pluginExecutionFilter>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <versionRange>[${exec-maven-plugin.version},)</versionRange>
+                        <goals>
+                          <goal>java</goal>
+                          <goal>exec</goal>
+                        </goals>
+                      </pluginExecutionFilter>
+                      <action>
+                        <execute>
+                          <runOnIncremental>true</runOnIncremental>
+                          <runOnConfiguration>true</runOnConfiguration>
+                        </execute>
+                      </action>
+                    </pluginExecution>
+                    <pluginExecution>
+                      <pluginExecutionFilter>
+                        <groupId>org.assertj</groupId>
+                        <artifactId>assertj-assertions-generator-maven-plugin</artifactId>
+                        <versionRange>[${assertj-assertions-generator-maven-plugin.version},)</versionRange>
+                        <goals>
+                          <goal>generate-assertions</goal>
+                        </goals>
+                      </pluginExecutionFilter>
+                      <action>
+                        <execute>
+                          <runOnIncremental>true</runOnIncremental>
+                          <runOnConfiguration>true</runOnConfiguration>
+                        </execute>
+                      </action>
+                    </pluginExecution>
+                  </pluginExecutions>
+                </lifecycleMappingMetadata>
+              </configuration>
+            </plugin>
+          </plugins>
+        </pluginManagement>
+      </build>
+    </profile>
+
   </profiles>
 
   <!-- Various information, not used by the build -->
-
   <url>http://activiti.org</url>
   <licenses>
     <license>
@@ -743,13 +788,12 @@
   </issueManagement>
   <ciManagement>
     <system>Travis</system>
-    <url>http://bamboo.ci.codehaus.org/browse/ACT</url>
+    <url>https://travis-ci.org/Activiti/${project.artifactId}</url>
   </ciManagement>
   <scm>
-    <url>https://github.com/Activiti/activiti-build</url>
-    <connection>scm:git:https://github.com/Activiti/activiti-build.git</connection>
-    <developerConnection>scm:git:https://github.com/Activiti/activiti-build.git</developerConnection>
-    <tag>HEAD</tag>
+    <url>http://github.com/Activiti/${project.artifactId}</url>
+    <connection>scm:git:git://github.com/Activiti/${project.artifactId}.git</connection>
+    <developerConnection>scm:git:ssh://git@github.com/Activiti/${project.artifactId}.git</developerConnection>
   </scm>
   <developers>
     <developer>
