--- a/activiti-bpmn-model/pom.xml
+++ b/activiti-bpmn-model/pom.xml
@@ -8,7 +8,7 @@
   <parent>
     <groupId>org.activiti</groupId>
     <artifactId>activiti-root</artifactId>
-    <version>7-201802-EA-lucian_1720_add_validation_endpoint_process_model-SNAPSHOT</version>
+    <version>7-201802-EA-SNAPSHOT</version>
   </parent>
 
   <properties>
