--- a/pom.xml
+++ b/pom.xml
@@ -87,8 +87,8 @@
     <activiti.version>7-201802-EA-SNAPSHOT</activiti.version>
     <batik.version>1.9.1</batik.version>
     <commons-email.version>1.5</commons-email.version>
-    <commons-fileupload.version>1.2.2</commons-fileupload.version>
-    <commons-io.version>2.0.1</commons-io.version>
+    <commons-fileupload.version>1.3.3</commons-fileupload.version>
+    <commons-io.version>2.6</commons-io.version>
     <el-api.version>2.2</el-api.version>
     <geronimo.version>1.1.1</geronimo.version>
     <java-uuid-generator.version>3.1.4</java-uuid-generator.version>
@@ -99,6 +99,7 @@
     <json-unit.version>1.24.0</json-unit.version>
     <jsr250-api.version>1.0</jsr250-api.version>
     <juel.version>2.2.7</juel.version>
+    <hibernate-jpa-2.1-api.version>1.0.2.Final</hibernate-jpa-2.1-api.version>
     <mybatis.version>3.4.2</mybatis.version>
     <spring-boot.version>2.0.0.RELEASE</spring-boot.version>
     <subethasmtp-wiser.version>1.2</subethasmtp-wiser.version>
@@ -143,6 +144,11 @@
         <groupId>javax.el</groupId>
         <artifactId>el-api</artifactId>
         <version>${el-api.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.hibernate.javax.persistence</groupId>
+        <artifactId>hibernate-jpa-2.1-api</artifactId>
+        <version>${hibernate-jpa-2.1-api.version}</version>
       </dependency>
       <dependency>
         <groupId>commons-io</groupId>
