--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
     </developer>
   </developers>
   <modules>
+    <module>activiti-dependency-check</module>
     <module>activiti-dependencies</module>
     <module>activiti-parent</module>
   </modules>
@@ -740,29 +741,6 @@
           </execution>
         </executions>
       </plugin>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>build-helper-maven-plugin</artifactId>
-        <inherited>false</inherited>
-        <executions>
-          <execution>
-            <id>attach-artifacts</id>
-            <phase>package</phase>
-            <goals>
-              <goal>attach-artifact</goal>
-            </goals>
-            <configuration>
-              <artifacts>
-                <artifact>
-                  <file>${basedir}/dependency-check-suppression.xml</file>
-                  <type>xml</type>
-                  <classifier>dependency-check-suppression</classifier>
-                </artifact>
-              </artifacts>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
     </plugins>
   </build>
   <profiles>
@@ -786,32 +764,6 @@
                 <id>sign-artifacts</id>
                 <goals>
                   <goal>sign</goal>
-                </goals>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-    <!-- profile to check dependencies for vulnerabilities -->
-    <profile>
-      <id>dependency-check</id>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.owasp</groupId>
-            <artifactId>dependency-check-maven</artifactId>
-            <version>${dependency-check-maven.version}</version>
-            <configuration>
-              <failBuildOnCVSS>7</failBuildOnCVSS>
-              <suppressionFiles>
-                <suppressionFile>${settings.localRepository}/org/activiti/activiti-build/${project.version}/activiti-build-${project.version}-dependency-check-suppression.xml</suppressionFile>
-              </suppressionFiles>
-            </configuration>
-            <executions>
-              <execution>
-                <goals>
-                  <goal>check</goal>
                 </goals>
               </execution>
             </executions>
