--- a/loan-request/pom.xml
+++ b/loan-request/pom.xml
@@ -4,8 +4,6 @@
   <name>Loan Request - Activiti Spring</name>
   <artifactId>loan-request</artifactId>
 
-  <groupId>org.activiti</groupId>
-
   <parent>
     <groupId>org.activiti</groupId>
     <artifactId>activiti-examples-root</artifactId>
@@ -129,8 +127,8 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>commons-dbcp</groupId>
-      <artifactId>commons-dbcp</artifactId>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-dbcp2</artifactId>
       <scope>test</scope>
     </dependency>
 
