fix tomcat start scripts #1825 - incorrect junit and servlet-api dep scopes

--- a/modules/activiti-ui/activiti-app-logic/pom.xml
+++ b/modules/activiti-ui/activiti-app-logic/pom.xml
@@ -138,6 +138,7 @@
     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>javax.servlet-api</artifactId>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>javax.validation</groupId>
