--- a/modules/activiti-ui/activiti-app-rest/pom.xml
+++ b/modules/activiti-ui/activiti-app-rest/pom.xml
@@ -122,6 +122,7 @@
     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>javax.servlet-api</artifactId>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>javax.validation</groupId>
