--- a/tooling/archetypes/activiti-archetype-unittest/src/main/resources/archetype-resources/pom.xml
+++ b/tooling/archetypes/activiti-archetype-unittest/src/main/resources/archetype-resources/pom.xml
@@ -19,6 +19,7 @@
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>${junit.version}</version>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>com.h2database</groupId>
@@ -30,6 +31,7 @@
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
       <version>${logback.version}</version>
+      <scope>test</scope>
     </dependencyx>
   </dependencies>
 </project>
