--- a/modules/activiti-process-validation/pom.xml
+++ b/modules/activiti-process-validation/pom.xml
@@ -96,6 +96,7 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 </project>
