--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,7 @@
     <argLine>-Duser.language=en</argLine>
     <!-- dependency -->
     <activiti.version>7-201803-EA-SNAPSHOT</activiti.version>
+    <asm.version>6.1.1</asm.version>
     <batik.version>1.9.1</batik.version>
     <commons-email.version>1.5</commons-email.version>
     <commons-fileupload.version>1.3.3</commons-fileupload.version>
@@ -544,6 +545,11 @@
             <groupId>de.is24.maven.enforcer.rules</groupId>
             <artifactId>illegal-transitive-dependency-check</artifactId>
             <version>${illegal-transitive-dependency-check.version}</version>
+          </dependency>
+          <dependency>
+            <groupId>org.ow2.asm</groupId>
+            <artifactId>asm-analysis</artifactId>
+            <version>${asm.version}</version>
           </dependency>
         </dependencies>
         <executions>
