liquibase-core 版本好过高导致源代码发生liquibase创建bean失败，在开发环境配jetty,activiti-app需要配置访问路径为activiti-app是才能正常登陆

--- a/modules/activiti-admin/src/main/resources/META-INF/activiti-admin/activiti-admin.properties
+++ b/modules/activiti-admin/src/main/resources/META-INF/activiti-admin/activiti-admin.properties
@@ -10,8 +10,8 @@ security.rememberme.key=activitis3cr3tk3y
 
 # MySQL example
 
-#datasource.driver=com.mysql.jdbc.Driver
-#datasource.url=jdbc:mysql://127.0.0.1:3306/activitiadmin?characterEncoding=UTF-8
+datasource.driver=com.mysql.jdbc.Driver
+datasource.url=jdbc:mysql://127.0.0.1:3306/activitiadmin?characterEncoding=UTF-8
 
 #datasource.driver=org.postgresql.Driver
 #datasource.url=jdbc:postgresql://localhost:5432/activitiadmin
@@ -25,8 +25,8 @@ security.rememberme.key=activitis3cr3tk3y
 #datasource.driver=com.ibm.db2.jcc.DB2Driver
 #datasource.url=jdbc:db2://localhost:50000/activitiadmin
 
-#datasource.username=activiti
-#datasource.password=
+datasource.username=root
+datasource.password=admin
 
 # JNDI CONFIG
 
@@ -42,7 +42,7 @@ security.rememberme.key=activitis3cr3tk3y
 #datasource.jndi.resourceRef=true
 
 #hibernate.dialect=org.hibernate.dialect.H2Dialect
-#hibernate.dialect=org.hibernate.dialect.MySQLDialect
+hibernate.dialect=org.hibernate.dialect.MySQLDialect
 #hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
 #hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 #hibernate.dialect=org.hibernate.dialect.DB2Dialect
@@ -117,4 +117,4 @@ security.encryption.credentialsSecretSpec=9FGl73ngxcOoJvmL
 modeler.url=https://activiti.alfresco.com/activiti-app/api/
 
 # Enable multi tenant support, disabled by default
-#multi-tenant.enabled=true 
+#multi-tenant.enabled=true
