--- a/modules/activiti-ui/activiti-app/src/main/resources/META-INF/activiti-app/activiti-app.properties
+++ b/modules/activiti-ui/activiti-app/src/main/resources/META-INF/activiti-app/activiti-app.properties
@@ -7,17 +7,17 @@ security.rememberme.key=testkey
 # DATABASE
 #
 
-datasource.driver=org.h2.Driver
-datasource.url=jdbc:h2:mem:activiti;DB_CLOSE_DELAY=-1
+#datasource.driver=org.h2.Driver
+#datasource.url=jdbc:h2:mem:activiti;DB_CLOSE_DELAY=-1
 
-#datasource.driver=com.mysql.jdbc.Driver
-#datasource.url=jdbc:mysql://127.0.0.1:3306/activiti6ui?characterEncoding=UTF-8
+datasource.driver=com.mysql.jdbc.Driver
+datasource.url=jdbc:mysql://127.0.0.1:3306/activiti6ui?characterEncoding=UTF-8&useSSL=false
 
-datasource.username=sa
-datasource.password=
+datasource.username=root
+datasource.password=admin
 
-hibernate.dialect=org.hibernate.dialect.H2Dialect
-#hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#hibernate.dialect=org.hibernate.dialect.H2Dialect
+hibernate.dialect=org.hibernate.dialect.MySQLDialect
 #hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
 #hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 #hibernate.dialect=org.hibernate.dialect.DB2Dialect
