--- a/modules/activiti-admin/pom.xml
+++ b/modules/activiti-admin/pom.xml
@@ -51,6 +51,11 @@
 
     <!-- DATABASE -->
     <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>5.1.45</version>
+    </dependency>
+    <dependency>
       <groupId>org.liquibase</groupId>
       <artifactId>liquibase-core</artifactId>
       <version>3.1.0</version>
@@ -77,6 +82,8 @@
     </dependency>
 
     <!-- COMMON dependencies -->
+
+
     <dependency>
       <groupId>commons-fileupload</groupId>
       <artifactId>commons-fileupload</artifactId>
@@ -93,6 +100,8 @@
       <groupId>javax.annotation</groupId>
       <artifactId>jsr250-api</artifactId>
       <version>1.0</version>
+
+
     </dependency>
     <dependency>
       <groupId>javax.inject</groupId>
@@ -305,13 +314,6 @@
           <port>8081</port>
           <protocol>org.apache.coyote.http11.Http11NioProtocol</protocol>
         </configuration>
-        <dependencies>
-          <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>${mysql.version}</version>
-          </dependency>
-        </dependencies>
       </plugin>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
