--- a/modules/activiti-simple-workflow-alfresco/pom.xml
+++ b/modules/activiti-simple-workflow-alfresco/pom.xml
@@ -10,7 +10,7 @@
     <groupId>org.activiti</groupId>
     <artifactId>activiti-root</artifactId>
     <relativePath>../..</relativePath>
-    <version>5.21.0</version>
+    <version>5.21.0.dgit-fix-8</version>
   </parent>
 
   <dependencies>
