--- a/activiti-dependencies/pom.xml
+++ b/activiti-dependencies/pom.xml
@@ -40,6 +40,11 @@
       </dependency>
       <dependency>
         <groupId>org.activiti</groupId>
+        <artifactId>activiti-identity-basic</artifactId>
+        <version>${activiti.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.activiti</groupId>
         <artifactId>activiti-process-model-api</artifactId>
         <version>${activiti.version}</version>
       </dependency>
@@ -116,6 +121,11 @@
       <dependency>
         <groupId>org.activiti</groupId>
         <artifactId>activiti-spring</artifactId>
+        <version>${activiti.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.activiti</groupId>
+        <artifactId>activiti-spring-boot-starter</artifactId>
         <version>${activiti.version}</version>
       </dependency>
       <dependency>
