--- a/activiti-api/activiti-task-model-api-impl/pom.xml
+++ b/activiti-api/activiti-task-model-api-impl/pom.xml
@@ -28,6 +28,10 @@
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-annotations</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-core</artifactId>
     </dependency>
     <dependency>
