--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
     <module>activiti-spring</module>
     <module>activiti-spring-identity</module>
     <module>activiti-spring-security</module>
+    <module>activiti-spring-security-policies</module>
     <module>activiti-spring-boot-starter</module>
   </modules>
   <scm>
