--- a/activiti-api/activiti-cloud-common-model-api-impl/pom.xml
+++ b/activiti-api/activiti-cloud-common-model-api-impl/pom.xml
@@ -38,5 +38,9 @@
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-annotations</artifactId>
+    </dependency>
   </dependencies>
 </project>
