adding security policies to ProcessRuntimeImpl

--- a/activiti-api/activiti-cloud-common-model-api-impl/pom.xml
+++ b/activiti-api/activiti-cloud-common-model-api-impl/pom.xml
@@ -20,6 +20,12 @@
     </dependency>
     <dependency>
       <groupId>org.activiti</groupId>
+      <artifactId>activiti-spring-security-policies</artifactId>
+      <!-- @TODO: add to deps management -->
+      <version>7-201803-EA-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.activiti</groupId>
       <artifactId>activiti-common-model-api-impl</artifactId>
     </dependency>
     <dependency>
