--- a/activiti-spring-security-policies/pom.xml
+++ b/activiti-spring-security-policies/pom.xml
@@ -18,6 +18,10 @@
     </dependency>
     <dependency>
       <groupId>org.activiti</groupId>
+      <artifactId>activiti-process-model-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.activiti</groupId>
       <artifactId>activiti-common-runtime-api</artifactId>
     </dependency>
     <dependency>
@@ -43,5 +47,6 @@
       <groupId>org.springframework.security</groupId>
       <artifactId>spring-security-core</artifactId>
     </dependency>
+
   </dependencies>
 </project>
