--- a/activiti-spring-boot-starter/pom.xml
+++ b/activiti-spring-boot-starter/pom.xml
@@ -13,11 +13,13 @@
     <dependency>
       <groupId>org.activiti</groupId>
       <artifactId>activiti-spring-identity</artifactId>
+      <!-- @TODO: add to dep mgmt -->
       <version>7-201803-EA-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.activiti</groupId>
       <artifactId>activiti-spring-security</artifactId>
+      <!-- @TODO: add to dep mgmt -->
       <version>7-201803-EA-SNAPSHOT</version>
     </dependency>
     <dependency>
